--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.7",
     "tailwindcss": "3.3.3"
   }
 }
